--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,19 +1,12 @@
 [toolchain]
-anchor_version = "0.30.0"
+anchor_version = "0.31.1"
 
-[features]
-seeds = false
-skip-lint = false
-
-[programs.localnet]
+[programs.devnet]
 flash_pred = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg3q2aW7v4Yk"
 
-[registry]
-url = "https://api.apr.dev"
-
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p tsconfig.json -t 1000000 tests/**/*.ts"
+test = "anchor test"
