--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,8 @@
-[package]
-name = "flash_pred"
-version = "0.1.0"
-description = "Created with Anchor"
-edition = "2021"
+[workspace]
+members = [
+    "programs/*"
+]
+resolver = "2"
 
-[lib]
-crate-type = ["cdylib", "lib"]
-name = "flash_pred"
-
-[features]
-no-entrypoint = []
-no-idl = []
-no-log-ix-name = []
-cpi = ["no-entrypoint"]
-default = []
-init-if-needed = [] # This is the new required feature
-
-[dependencies]
-anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
-anchor-spl = "0.31.1"
-pyth-client = "0.2.2"
+[workspace.profile.release]
+overflow-checks = true
