borrow checker fix
copilot fixes in lib.rs for borrow checker errors.

Uses market.to_account_info() in both claim_winnings and refund_unsettlable

--- a/programs/flash_pred/Cargo.toml
+++ b/programs/flash_pred/Cargo.toml
@@ -19,7 +19,7 @@ init-if-needed = [] # This is the new required feature
 [dependencies]
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
-pyth-client = "0.2.2"
+pyth-sdk-solana = "0.8"
 
 [profile.release]
 overflow-checks = true
